[gd_scene load_steps=83 format=2]

[ext_resource path="res://Ressources/Sprites/Player.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Perso/Player.gd" type="Script" id=2]
[ext_resource path="res://Ressources/Sprites/transf/Jump/Jump3.png" type="Texture" id=3]
[ext_resource path="res://Ressources/Sprites/transf/shoot/shoot1.png" type="Texture" id=4]
[ext_resource path="res://Ressources/Sprites/transf/Walk/Walk1.png" type="Texture" id=5]
[ext_resource path="res://Ressources/Sprites/transf/Walk/Walk2.png" type="Texture" id=6]
[ext_resource path="res://Ressources/Sprites/transf/Walk/Walk6.png" type="Texture" id=7]
[ext_resource path="res://Ressources/Sprites/transf/Walk/Walk9.png" type="Texture" id=8]
[ext_resource path="res://Ressources/Sprites/transf/Walk/Walk5.png" type="Texture" id=9]
[ext_resource path="res://Ressources/Sprites/transf/Walk/Walk4.png" type="Texture" id=10]
[ext_resource path="res://Ressources/Sprites/transf/Walk/Walk8.png" type="Texture" id=11]
[ext_resource path="res://Ressources/Sprites/transf/Walk/Walk3.png" type="Texture" id=12]
[ext_resource path="res://Ressources/Sprites/transf/Walk/Walk7.png" type="Texture" id=13]
[ext_resource path="res://Ressources/Sprites/transf/Jump/Jump2.png" type="Texture" id=14]
[ext_resource path="res://Ressources/Sprites/transf/Hit1.png" type="Texture" id=15]
[ext_resource path="res://Ressources/Sprites/transf/shoot/shoot2.png" type="Texture" id=16]
[ext_resource path="res://Ressources/Sprites/transf/shoot/shoot3.png" type="Texture" id=17]
[ext_resource path="res://Ressources/Sprites/transf/shoot/shoot7.png" type="Texture" id=18]
[ext_resource path="res://Ressources/Sprites/transf/shoot/shoot5.png" type="Texture" id=19]
[ext_resource path="res://Ressources/Sprites/transf/shoot/shoot6.png" type="Texture" id=20]
[ext_resource path="res://Ressources/Sprites/transf/shoot/shoot4.png" type="Texture" id=21]
[ext_resource path="res://Ressources/Sprites/transf/Spawn/spawn5.png" type="Texture" id=22]
[ext_resource path="res://Ressources/Sprites/transf/Spawn/spawn11.png" type="Texture" id=23]
[ext_resource path="res://Ressources/Sprites/transf/Spawn/spawn7.png" type="Texture" id=24]
[ext_resource path="res://Ressources/Sprites/transf/Spawn/spawn6.png" type="Texture" id=25]
[ext_resource path="res://Ressources/Sprites/transf/Spawn/spawn10.png" type="Texture" id=26]
[ext_resource path="res://Ressources/Sprites/transf/Spawn/spawn4.png" type="Texture" id=27]
[ext_resource path="res://Ressources/Sprites/transf/Spawn/PlayerUp3.png" type="Texture" id=28]
[ext_resource path="res://Ressources/Sprites/transf/Spawn/spawn8.png" type="Texture" id=29]
[ext_resource path="res://Ressources/Sprites/transf/Spawn/PlayerUp5.png" type="Texture" id=30]
[ext_resource path="res://Ressources/Sprites/transf/Spawn/spawn9.png" type="Texture" id=31]
[ext_resource path="res://Ressources/Sprites/transf/Spawn/spawn3.png" type="Texture" id=32]
[ext_resource path="res://Ressources/Sprites/transf/Spawn/PlayerUp1.png" type="Texture" id=33]
[ext_resource path="res://Ressources/Sprites/transf/Spawn/PlayerUp2.png" type="Texture" id=34]
[ext_resource path="res://Ressources/Sprites/transf/Spawn/PlayerUp4.png" type="Texture" id=35]
[ext_resource path="res://Scenes/Objects/RageBar.tscn" type="PackedScene" id=36]
[ext_resource path="res://Ressources/Sprites/transf/cac/cac6.png" type="Texture" id=37]
[ext_resource path="res://Ressources/Sprites/transf/cac/cac5.png" type="Texture" id=38]
[ext_resource path="res://Ressources/Sprites/transf/Idle/Idle1.png" type="Texture" id=39]
[ext_resource path="res://Ressources/Sprites/transf/cac/cac0.png" type="Texture" id=40]
[ext_resource path="res://Ressources/Sprites/transf/Spawn/spawn2.png" type="Texture" id=41]
[ext_resource path="res://Ressources/Sprites/transf/cac/cac1.png" type="Texture" id=42]
[ext_resource path="res://Ressources/Sprites/transf/cac/cac4.png" type="Texture" id=43]
[ext_resource path="res://Ressources/Sprites/transf/playerUP/PlayerUp1.png" type="Texture" id=44]
[ext_resource path="res://Ressources/Sprites/transf/playerUP/PlayerUp2.png" type="Texture" id=45]
[ext_resource path="res://Ressources/Sprites/transf/Spawn/spawn1.png" type="Texture" id=46]
[ext_resource path="res://Ressources/Sprites/transf/playerUP/PlayerUp5.png" type="Texture" id=47]
[ext_resource path="res://Ressources/Sprites/transf/playerUP/PlayerUp3.png" type="Texture" id=48]
[ext_resource path="res://Ressources/Sprites/transf/playerUP/PlayerUp4.png" type="Texture" id=49]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.0
height = 11.0

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 47 )
region = Rect2( 160, 480, 80, 120 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 49 )
region = Rect2( 160, 480, 80, 120 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 48 )
region = Rect2( 160, 480, 80, 120 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 45 )
region = Rect2( 160, 480, 80, 120 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 44 )
region = Rect2( 160, 480, 80, 120 )

[sub_resource type="StreamTexture" id=7]
load_path = "res://.import/Idle10.png-964d54e58241b8bd14b99c87b914845d.stex"

[sub_resource type="StreamTexture" id=8]
load_path = "res://.import/Idle9.png-756ffd5f4dc0779db7442c753b762b4d.stex"

[sub_resource type="StreamTexture" id=9]
load_path = "res://.import/Idle8.png-85b0392b67b035049ca0f2fec41de009.stex"

[sub_resource type="StreamTexture" id=10]
load_path = "res://.import/Idle7.png-0edb29c5051a560e2bcadaacfd2647aa.stex"

[sub_resource type="StreamTexture" id=11]
load_path = "res://.import/Idle6.png-b6c52174ad24d62fb376b79d257028a4.stex"

[sub_resource type="StreamTexture" id=12]
load_path = "res://.import/Idle4.png-417c0fa9c1ba112d0d064a506758b478.stex"

[sub_resource type="StreamTexture" id=13]
load_path = "res://.import/Idle5.png-6c13f3ccb787f56a932c1a351d2e1233.stex"

[sub_resource type="StreamTexture" id=14]
load_path = "res://.import/Idle1.png-24ae8a8aea8dfa0c5c78c6bf15e681b1.stex"

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 33 )
region = Rect2( 160, 480, 80, 120 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 34 )
region = Rect2( 160, 480, 80, 120 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 28 )
region = Rect2( 160, 480, 80, 120 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 35 )
region = Rect2( 160, 480, 80, 120 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 30 )
region = Rect2( 160, 480, 80, 120 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 480, 600, 160, 120 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 640, 0, 160, 120 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 800, 0, 160, 120 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 320, 600, 160, 120 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 160, 120, 80, 120 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 1 )
region = Rect2( 240, 120, 80, 120 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 1 )
region = Rect2( 160, 600, 160, 120 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 1 )
region = Rect2( 160, 480, 80, 120 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 1 )
region = Rect2( 480, 0, 80, 120 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 1 )
region = Rect2( 560, 0, 80, 120 )

[sub_resource type="SpriteFrames" id=30]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "PowerDown",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 11 ), ExtResource( 13 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 12 ), ExtResource( 10 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "Run_Up",
"speed": 13.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 17 ), ExtResource( 21 ), ExtResource( 20 ), ExtResource( 19 ), ExtResource( 18 ) ],
"loop": true,
"name": "Run and Shoot Up",
"speed": 10.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "Idle and Shoot Up",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "Idle_Up",
"speed": 7.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "Fall Up",
"speed": 5.0
}, {
"frames": [ ExtResource( 39 ), ExtResource( 40 ), ExtResource( 42 ), ExtResource( 38 ), ExtResource( 43 ), ExtResource( 37 ), ExtResource( 39 ) ],
"loop": true,
"name": "cac",
"speed": 10.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": false,
"name": "Spawn0",
"speed": 5.0
}, {
"frames": [ SubResource( 20 ) ],
"loop": true,
"name": "Jump and Shoot",
"speed": 5.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 26 ), ExtResource( 31 ), ExtResource( 29 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 22 ), ExtResource( 27 ), ExtResource( 32 ), ExtResource( 41 ), ExtResource( 46 ) ],
"loop": true,
"name": "PowerDown2",
"speed": 5.0
}, {
"frames": [ SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "Run and Shoot",
"speed": 5.0
}, {
"frames": [ SubResource( 23 ) ],
"loop": true,
"name": "Idle and Shoot",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Jump Up",
"speed": 5.0
}, {
"frames": [ ExtResource( 32 ), ExtResource( 27 ), ExtResource( 22 ), ExtResource( 25 ), ExtResource( 24 ), ExtResource( 29 ), ExtResource( 31 ), ExtResource( 26 ), ExtResource( 23 ) ],
"loop": false,
"name": "Spawn",
"speed": 7.0
}, {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "Die Up",
"speed": 5.0
}, {
"frames": [ SubResource( 24 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ SubResource( 25 ) ],
"loop": true,
"name": "Fall",
"speed": 5.0
}, {
"frames": [ SubResource( 26 ) ],
"loop": true,
"name": "Die",
"speed": 5.0
}, {
"frames": [ SubResource( 27 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 28 ), SubResource( 29 ) ],
"loop": true,
"name": "Run",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=31]
extents = Vector2( 39.6095, 12.4255 )

[sub_resource type="Gradient" id=32]
offsets = PoolRealArray( 0, 0.298013, 0.470199, 0.86755, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 0.36713, 0.36713, 0.36713, 1, 0.543046, 0.543046, 0.543046, 1, 0.675497, 0.675497, 0.675497, 1, 1, 1, 1, 1 )

[sub_resource type="CapsuleShape2D" id=33]
radius = 4.56832
height = 4.71353

[node name="Player" type="KinematicBody2D"]
position = Vector2( -8, 0 )
z_index = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.32481, -0.0595398 )
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 30 )
animation = "PowerDown2"

[node name="Cac" type="Area2D" parent="Sprite"]

[node name="hitboxCac" type="CollisionShape2D" parent="Sprite/Cac"]
position = Vector2( -40.1722, 7.688 )
shape = SubResource( 31 )
disabled = true

[node name="cacAnime" type="Timer" parent="Sprite/Cac"]
wait_time = 0.7
one_shot = true

[node name="PositionArm" type="Position2D" parent="Sprite/Cac"]
position = Vector2( -60, 5 )
scale = Vector2( 5, 5 )

[node name="collisionTimer" type="Timer" parent="Sprite/Cac"]
wait_time = 0.5

[node name="Camera2D" type="Camera2D" parent="."]
scale = Vector2( 1.5, 1.5 )
current = true
zoom = Vector2( 0.5, 0.5 )
limit_smoothed = true
smoothing_enabled = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -44.9356, 0.142399 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="ParticleMove" type="CPUParticles2D" parent="."]
position = Vector2( 2.5, 11.2 )
emitting = false
emission_shape = 1
emission_sphere_radius = 0.01
spread = 29.52
gravity = Vector2( 0, -10 )
initial_velocity = 15.0
radial_accel = -0.34
radial_accel_random = 0.26
angle = 145.9
color_ramp = SubResource( 32 )

[node name="Ghost_Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="Ghost_end" type="Timer" parent="."]
wait_time = 3.0

[node name="HitboxUp" type="CollisionShape2D" parent="."]
position = Vector2( -0.303688, 1.11804 )
shape = SubResource( 33 )
disabled = true

[node name="SpawnTime" type="Timer" parent="."]
one_shot = true

[node name="SpawnTimeOne" type="Timer" parent="."]
one_shot = true

[node name="Control" parent="." instance=ExtResource( 36 )]
margin_left = -11.2462
margin_top = -16.8684
margin_right = 212.754
margin_bottom = 23.1316
rect_scale = Vector2( 0.1, 0.1 )

[node name="active" type="Timer" parent="Control"]
wait_time = 1.278

[node name="TimerDown" type="Timer" parent="."]
one_shot = true

[node name="TimerDown2" type="Timer" parent="."]
one_shot = true

[node name="TimerDownNow" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
[connection signal="area_entered" from="Sprite/Cac" to="." method="_on_Cac_area_entered"]
[connection signal="body_entered" from="Sprite/Cac" to="." method="_on_Cac_body_entered"]
[connection signal="timeout" from="Sprite/Cac/cacAnime" to="." method="_on_cacAnime_timeout"]
[connection signal="timeout" from="Sprite/Cac/collisionTimer" to="." method="_on_collisionTimer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Ghost_Timer" to="." method="_on_Ghost_Timer_timeout"]
[connection signal="timeout" from="Ghost_end" to="." method="_on_Ghost_end_timeout"]
[connection signal="timeout" from="SpawnTime" to="." method="_on_SpawnTime_timeout"]
[connection signal="timeout" from="SpawnTimeOne" to="." method="_on_SpawnTimeOne_timeout"]
[connection signal="timeout" from="Control/active" to="." method="_on_active_timeout"]
[connection signal="timeout" from="TimerDown" to="." method="_on_TimerDown_timeout"]
[connection signal="timeout" from="TimerDown2" to="." method="_on_TimerDown2_timeout"]
[connection signal="timeout" from="TimerDownNow" to="." method="_on_TimerDownNow_timeout"]
